# cosmos-transfer1

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  Dockerfile  Dockerfile.gradio  INSTALL.md  README.md  cosmos-transfer1.yaml  demo.sh  justfile  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  superlinter.yml  test.yml
assets/: sample_av_hdmap_multiview_lvg_spec.json  sample_av_hdmap_multiview_spec.json  sample_av_hdmap_multiview_waymo_spec.json  sample_av_lidar_multiview_lvg_spec.json  sample_av_lidar_multiview_spec.json  sample_av_multi_control_spec_with_input_video.json
checkpoints/: README.md
configs/prompt_packs/: oneclip_manyworlds.jsonl.txt
cosmos_transfer1/: checkpoints.py
cosmos_transfer1/auxiliary/depth_anything/model/: depth_anything.py
cosmos_transfer1/auxiliary/edge_control/: edge_control.py
cosmos_transfer1/auxiliary/guardrail/: README.md
cosmos_transfer1/auxiliary/guardrail/common/: presets.py
cosmos_transfer1/auxiliary/guardrail/llamaGuard3/: llamaGuard3.py
cosmos_transfer1/auxiliary/robot_augmentation/: README.md
cosmos_transfer1/auxiliary/upsampler/: README.md
cosmos_transfer1/auxiliary/vis_control/: vis_control.py
cosmos_transfer1/diffusion/: conditioner.py
cosmos_transfer1/diffusion/config/: registry.py
cosmos_transfer1/diffusion/config/base/: net.py  (+1 more)
cosmos_transfer1/diffusion/datasets/: augmentor_provider.py  example_transfer_dataset.py
cosmos_transfer1/diffusion/inference/: dummy_pipeline.py  inference_utils.py  preprocessors.py  transfer.py  transfer_multiview.py  transfer_pipeline.py  world_generation_pipeline.py
cosmos_transfer1/diffusion/model/: model_ctrl.py  model_multi_camera_ctrl.py  model_t2w.py  model_v2w.py  model_v2w_multiview.py
cosmos_transfer1/diffusion/module/: blocks.py  position_embedding.py  pretrained_vae.py
cosmos_transfer1/diffusion/networks/: general_dit.py  general_dit_ctrl_enc_multiview.py  general_dit_multi_view.py
cosmos_transfer1/diffusion/training/: README.md  train.py
cosmos_transfer1/distillation/: train.py
cosmos_transfer1/distillation/callbacks/: every_n_draw_sample.py  grad_clip.py
cosmos_transfer1/distillation/checkpointer/: distill_checkpointer.py  distill_fsdp_checkpointer.py
cosmos_transfer1/distillation/config/: config_base_dmd2.py  config_base_kd.py  config_ctrl_dmd2.py  config_ctrl_kd.py  registry.py
cosmos_transfer1/distillation/datasets/: example_kd_dataset.py  mock_data_distill.py  mock_distill_dataset.py
cosmos_transfer1/distillation/models/: base_model_distill.py  ctrl_model_distill.py  model_dmd2.py  model_kd.py  v2w_model_distill.py
cosmos_transfer1/distillation/scripts/: combine_base_ctrl_ckpt.py  convert_fsdp_dcp_to_native_ckpt.py  save_negative_prompt.py
cosmos_transfer1/distillation/trainer/: distillation_trainer.py
cosmos_transfer1/distillation/utils/: fsdp_distill.py
cosmos_transfer1/scripts/: format.sh  ip_header.py
cosmos_transfer1/utils/: combined_gif.py  fix_vllm_registration.py  intermediates.py  regional_prompting_utils.py  video_utils.py
examples/: distillation_cosmos_transfer1_7b.md  inference_cosmos_transfer1_7b.md  inference_cosmos_transfer1_7b_4kupscaler.md  inference_cosmos_transfer1_7b_depth.md  inference_cosmos_transfer1_7b_regional_prompt.md  inference_cosmos_transfer1_7b_sample_av.md  inference_cosmos_transfer1_7b_sample_av_single2multiview.md  inference_cosmos_transfer1_7b_seg.md  inference_cosmos_transfer1_7b_vis.md  inference_cosmos_transfer1pt1_7b_keypoint.md  training_cosmos_transfer_7B_sample_AV.md  training_cosmos_transfer_7b.md
scripts/: combine_base_ctrl_ckpt.py  convert_ckpt_tp_to_fsdp.py  download_checkpoints.py  format.sh  ip_header.py  rolling_inference.py  run_batch_edge.sh  test_environment.py
server/: command_ipc.py  deploy_config.py  gradio_app.py  gradio_file_server.py  model_factory.py  model_server.py  model_worker.py  start_gradio_app.sh
(+27 files in other folders)
