# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Note that the build will take some time due to transformer_engine installation which does a lot of CUDA compilation.
# But, at the end, you should be able to do an `import cosmos_transfer1` in python without any issues.

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-transfer1"
version = "1.0.0"
authors = [
    {name = "NVIDIA Corporation"},
]
description = "Cosmos World Foundation Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "better-profanity==0.7.0",
    "boto3==1.35.99",
    "decord==0.6.0",
    "diffusers==0.32.2",
    "einx==0.1.3",
    "huggingface-hub==0.29.2",
    "hydra-core==1.3.2",
    "imageio[pyav,ffmpeg]==2.37.0",
    "iopath==0.1.10",
    "ipdb==0.13.13",
    "loguru==0.7.3",
    "mediapy==1.2.2",
    "megatron-core==0.10.0",
    "natsort==8.4.0",
    "nltk==3.9.1",
    "omegaconf==2.3.0",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "peft==0.14.0",
    "pillow",
    "pycocotools",
    "python-magic",
    "retinaface-py==0.0.2",
    "rtmlib==0.0.13",
    "scikit-image==0.25.2",
    "sentencepiece==0.2.0",
    "termcolor==2.5.0",
    "tokenizers>=0.21.1",
    "transformers>=4.44,<4.51",
]

[project.optional-dependencies]
cu126 = [
  "transformer-engine==1.13",
  # Torch dependencies
  # Dependencies determined from `uv pip install "torch==2.6.0" --index-url https://download.pytorch.org/whl/cu126`
  # Issue: https://github.com/astral-sh/uv/issues/14237
  "nvidia-cublas-cu12==12.6.4.1",
  "nvidia-cuda-cupti-cu12==12.6.80",
  "nvidia-cuda-nvrtc-cu12==12.6.77",
  "nvidia-cuda-runtime-cu12==12.6.77",
  "nvidia-cudnn-cu12==9.5.1.17",
  "nvidia-cufft-cu12==11.3.0.4",
  "nvidia-curand-cu12==10.3.7.77",
  "nvidia-cusolver-cu12==11.7.1.2",
  "nvidia-cusparse-cu12==12.5.4.2",
  "nvidia-cusparselt-cu12==0.6.3",
  "nvidia-nccl-cu12==2.21.5",
  "nvidia-nvjitlink-cu12==12.6.85",
  "nvidia-nvtx-cu12==12.6.77",
  "vllm==0.8.2"
]


[project.urls]
homepage = "https://github.com/nvidia-cosmos/cosmos-transfer1/"
issues = "https://github.com/nvidia-cosmos/cosmos-transfer1/issues"

[tool.setuptools.packages]
find = {}

[tool.isort]
profile = "black"
known_third_party = ["third_party"]
skip = ["third_party"]
line_length = 120

[tool.black]
line-length = 120
target_version = ['py310']
exclude = 'third_party'

[tool.uv]
environments = [
  "python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]
no-build-package = [
  "apex",
  "flash-attn",
  "natten",
  "transformer-engine",
]
required-environments = [
    "python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
transformer-engine = [
  { index = "cosmos-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "cosmos-cu126"
url = "https://nvidia-cosmos.github.io/cosmos-dependencies/cu126_torch260/simple"
explicit = true

[tool.coverage.report]
include_namespace_packages = true
skip_empty = true
omit = [
    "tests/*",
    "legacy/*",
    ".venv/*",
    "**/test_*.py",
    "config.py",
    "config-3.10.py"
]
